feat: rework the Visitors
Signed-off-by: Andreas Reichel <andreas@manticore-projects.com>