@@ -34,7 +34,9 @@ def getVersion = { boolean considerSnapshot ->
         commandLine "git", "--no-pager", "describe", "--tags", "--always", "--dirty=-SNAPSHOT"
     }.standardOutput.asText.get().trim()
 
-    def pattern = /(?<major>\d*)\.(?<minor>\d*)(\.(?<patch>\d*))?(-(?<build>\d*)-(?<commit>[a-zA-Z\d]*))?/
+    println "Version String: $versionStr"
+
+    def pattern = /jsqlparser-(?<major>\d*)\.(?<minor>\d*)(\.(?<patch>\d*))?(-(?<build>\d*)-(?<commit>[a-zA-Z\d]*))?/
     def matcher = versionStr =~ pattern
 
     if (matcher.find()) {
@@ -124,7 +126,10 @@ java {
 }
 
 javadoc {
-    include("build/generated/javacc/net/sf/jsqlparser/parser/*.java" )
+    dependsOn(compileJavacc, compileJava )
+    source = layout.buildDirectory.dir("generated/javacc/net/sf/jsqlparser/parser").get().asFileTree.matching {
+        include("**/*.java")
+    }
     if(JavaVersion.current().isJava9Compatible()) {
         options.addBooleanOption('html5', true)
     }
@@ -140,6 +145,8 @@ jar {
 }
 
 tasks.register('xmldoc', Javadoc) {
+    println getVersion( true )
+
     def outFile =  reporting.file(
             version.endsWith("-SNAPSHOT")
                     ? "xmlDoclet/javadoc_snapshot.xml"
@@ -153,17 +160,25 @@ tasks.register('xmldoc', Javadoc) {
     )
 
     source = sourceSets.main.allJava
+//    source += fileTree(layout.buildDirectory.dir("generated/javacc/net/sf/jsqlparser/parser").get()) {
+//        include("**/*.java")
+//    }
+//    source += fileTree(layout.buildDirectory.dir("generated/jjtree/net/sf/jsqlparser/parser").get()) {
+//        include("**/*.java")
+//    }
     // beware: Gradle deletes this folder automatically and there is no switch-off
     destinationDir = reporting.file("xmlDoclet")
     options.docletpath = configurations.xmlDoclet.files as List
     options.doclet = "com.github.markusbernhardt.xmldoclet.XmlDoclet"
-    title = "API $version"
+    title = "API " + getVersion( !System.getenv("RELEASE") )
     options.addBooleanOption("rst", true)
     options.addBooleanOption("withFloatingToc", Boolean.parseBoolean(System.getenv().getOrDefault("FLOATING_TOC", "true")))
     options.addStringOption("basePackage", "net.sf.jsqlparser")
     options.addStringOption("filename", outFile.getName())
+    options.addStringOption('J-Xmx4g')
+    options.addStringOption('J-Xss2m')
 
-    dependsOn(compileJava)
+    dependsOn(compileJavacc, compileJava )
     doLast {
         copy {
             from rstFile
@@ -181,7 +196,7 @@ test {
     maxHeapSize = "4G"
 
     // set JVM stack size
-    jvmArgs = ['-Xss2m']
+    jvmArgs = ['-Xss2m', '--add-opens=java.base/java.lang=ALL-UNNAMED']
 
     jacoco {
         excludes = ['net/sf/jsqlparser/parser/CCJSqlParserTokenManager']
